Work on the client.

--- a/_web/index.html
+++ b/_web/index.html
@@ -1,12 +1,14 @@
 <html>
 <head>
   <title>S to the O to the J to the O</title>
+  <script type='text/javascript' src='js/main.js'></script>
+  <script type='text/javascript' src='js/sojo.js'></script>
 </head>
 
 <body>
 
-<div id='image'>
-  <img src='../?image'>
+<div id='imageholder'>
+  <img id='image' src=''>
 </div>
 
 </body>
