Add css and functionality.

--- a/_web/index.html
+++ b/_web/index.html
@@ -3,12 +3,25 @@
   <title>S to the O to the J to the O</title>
   <script type='text/javascript' src='js/main.js'></script>
   <script type='text/javascript' src='js/sojo.js'></script>
+  <link rel='stylesheet' type='text/css' href='css/main.css'/>
 </head>
 
 <body>
 
 <div id='imageholder'>
   <img id='image' src=''>
+</div>
+
+<div id='buttons'>
+  <a href="#" id='skip' class="skipButton" style="margin-right: 100px;">Skip</a>
+  <a href="#" id='good' class="okButton">Good</a>
+  <a href="#" id='bad' class="badButton">Bad</a>
+</div>
+
+<div id='panel'>
+
+  <span id='meta'></span>
+
 </div>
 
 </body>
