--- a/_web/index.html
+++ b/_web/index.html
@@ -13,9 +13,10 @@
 </div>
 
 <div id='buttons'>
-  <a href="#" id='skip' class="skipButton" style="margin-right: 100px;">Skip</a>
-  <a href="#" id='good' class="okButton">Good</a>
+  <a href="#" id='back' class="grayButton disabled" style=""><</a>
+  <a href="#" id='skip' class="grayButton" style="margin-right: 200px;">></a>
   <a href="#" id='bad' class="badButton">Bad</a>
+  <a href="#" id='good' class="okButton">Good</a>
 </div>
 
 <div id='panel'>
