--- a/_web/index.html
+++ b/_web/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <div id='buttons'>
-  <a href="#" id='back' class="grayButton disabled" style=""><</a>
+  <a href="#" id='back' class="grayButton disabled" style="display:none;"><</a>
   <a href="#" id='skip' class="grayButton" style="margin-right: 200px;">></a>
   <a href="#" id='bad' class="badButton">Bad</a>
   <a href="#" id='good' class="okButton">Good</a>
